--- a/translations/trufiapp_de_DE.arb
+++ b/translations/trufiapp_de_DE.arb
@@ -1,17 +1,17 @@
 {
-  "title": "Trufi App",
+  "title": "Trotro App",
   "@title": {
     "description": "The application's name",
     "type": "text",
     "placeholders": {}
   },
-  "tagline": "Öffentliche Verkehrsmittel in Cochabamba",
+  "tagline": "Öffentliche Verkehrsmittel in Accra",
   "@tagline": {
     "description": "A short marketing sentence that describes the app",
     "type": "text",
     "placeholders": {}
   },
-  "description": "Der beste Weg mit Trufis, Mikros und Bussen durch Cochabamba zu reisen.",
+  "description": "Der beste Weg mit Trufis, Mikros und Bussen durch Accra zu reisen.",
   "@description": {
     "description": "A sentence that describes the application's purpose",
     "type": "text",
@@ -453,13 +453,13 @@
     "type": "text",
     "placeholders": {}
   },
-  "shareAppText": "Hol' dir die Trufi, die App für den öffentlichen Nahverkehr in Cochabamba, auf {url}",
+  "shareAppText": "Hol' dir die Trotro, die App für den öffentlichen Nahverkehr in Accra, auf {url}",
   "@shareAppText": {
     "description": "Text with URL that is used when sharing the app.",
     "type": "text",
     "placeholders": {
       "url": {
-        "example": "https://trufi.share.url"
+        "example": "https://trotro.share.url"
       }
     }
   },
@@ -475,7 +475,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "aboutContent": "Wir sind ein bolivianisches und internationales Team, das den öffentlichen Nahverkehr liebt und unterstützen möchte. Wir haben diese App entwickelt, um den Menschen die Verwendung des öffentlichen Nahverkehrs in Cochabamba und der näheren Umgebung zu erleichtern.",
+  "aboutContent": "Wir sind ein bolivianisches und internationales Team, das den öffentlichen Nahverkehr liebt und unterstützen möchte. Wir haben diese App entwickelt, um den Menschen die Verwendung des öffentlichen Nahverkehrs in Accra und der näheren Umgebung zu erleichtern.",
   "@aboutContent": {
     "description": "Text displayed on the about page",
     "type": "text",
@@ -493,7 +493,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "teamContent": "Wir sind ein internationales Team mit dem Namen Trufi Association, das diese App mit Hilfe vieler Freiwilliger erstellt hat! Möchtest du mithelfen, die Trufi App zu verbessern und Teil unseres Teams sein? Bitte kontaktiere uns über:",
+  "teamContent": "Wir sind ein internationales Team mit dem Namen Trufi Association, das diese App mit Hilfe vieler Freiwilliger erstellt hat! Möchtest du mithelfen, die Trotro App zu verbessern und Teil unseres Teams sein? Bitte kontaktiere uns über:",
   "@teamContent": {
     "description": "Text displayed on the team page, followed by a email link",
     "type": "text",
@@ -572,7 +572,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "appReviewDialogTitle": "Magst du Trufi?",
+  "appReviewDialogTitle": "Magst du Trotro?",
   "@appReviewDialogTitle": {
     "description": "Title of the App Review Dialog used on Android",
     "type": "text",
